修复Unity包安装问题 - 添加所有.meta文件
- 为所有文件夹和文件创建了.meta文件，解决Unity无法识别包文件的问题
- 优化了package.json，添加了Unity版本发布信息
- 创建了.gitignore文件来正确管理版本控制
- 添加了详细的修复说明文档

修复内容：
 创建了所有必要的.meta文件
 优化了包结构，符合Unity Package Manager规范
 添加了版本控制配置文件
 提供了完整的重新安装指南

现在包应该可以在Unity中正常安装和使用了！

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,38 @@
 # Unity generated files
-/[Ll]ibrary/
-/[Tt]emp/
-/[Oo]bj/
-/[Bb]uild/
-/[Bb]uilds/
-/[Ll]ogs/
-/[Uu]ser[Ss]ettings/
-
-# Visual Studio / Visual Studio Code
-*.csproj
-*.sln
+*.tmp
+*.user
 *.userprefs
-.vs/
+*.pidb
+*.booproj
+*.svd
+*.pdb
+*.mdb
+*.opendb
+*.VC.db
+
+# Unity3D generated meta files
+*.pidb.meta
+*.pdb.meta
+*.mdb.meta
+
+# Unity3D generated file on crash reports
+sysinfo.txt
+
+# Builds
+*.apk
+*.aab
+*.unitypackage
+*.app
+
+# Crashlytics generated file
+crashlytics-build.properties
+
+# Packed Addressables
+[Aa]ssets/[Aa]ddressable[Aa]ssets[Dd]ata/*/*.bin*
+
+# Temporary auto-generated Android Assets
+[Aa]ssets/[Ss]treamingAssets/aa.meta
+[Aa]ssets/[Ss]treamingAssets/aa/*
 
 # OS generated files
 .DS_Store
@@ -28,5 +49,8 @@ Thumbs.db
 *.swp
 *.swo
 
-# Unity Package Manager
-[Uu]nityPackageManager/
+# Logs
+*.log
+
+# Keep .meta files for Unity packages
+!*.meta
