--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "email": "your.email@example.com"
   },
   "dependencies": {},
-  "changelogUrl": "https://github.com/HsgtLgt/AssetBundleTools2025/blob/main/Documentation~/CHANGELOG.md",
+  "changelogUrl": "https://github.com/HsgtLgt/AssetBundleTools2025/blob/main/Documentation/CHANGELOG.md",
   "documentationUrl": "https://github.com/HsgtLgt/AssetBundleTools2025/blob/main/README.md",
   "licensesUrl": "https://github.com/HsgtLgt/AssetBundleTools2025/blob/main/LICENSE",
   "repository": {
